[package]
author = "Lawrence Thorpe"
name = "dng"
homepage = "https://github.com/thorpelawrence/dng"
description = "Wrapper around Adobe DNG Converter via wine"
license = "zstd"
version = "13.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
xdg = "2.4.1"

[build-dependencies]
clap_mangen = "0.1"
clap = { version = "3.0", features = ["derive"] }
clap_complete = "3.2.3"
